first commit, bunch of pages added

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "ftcc-handbook",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "FTCC Handbook",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/ryanmacalandag/ftcc-handbook.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Ryan Macalandag",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/ryanmacalandag/ftcc-handbook/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/ryanmacalandag/ftcc-handbook#readme",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
@@ -27,5 +27,10 @@
   "devDependencies": {
     "@types/node": "18.11.10",
     "typescript": "^4.9.3"
-  }
+  },
+  "main": "next.config.js",
+  "keywords": [
+    "ftcc",
+    "documentation"
+  ]
 }
