--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-orgchart": "^1.0.5",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
